Testing with fixed thread = 10